--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -26,13 +26,11 @@
         </android.support.design.widget.AppBarLayout>
 
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                     xmlns:tools="http://schemas.android.com/tools"
-                     android:layout_width="match_parent"
+        <ImageView android:layout_width="match_parent"
                      android:layout_height="match_parent"
-                     android:id="@+id/fragmentContainer">
+                     android:id="@+id/grey_scale_imageView">
 
-        </FrameLayout>
+        </ImageView>
 
     </LinearLayout>
 
