--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,7 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.bignerdranch.android.videoframeanalyser.MainActivityFragment">
+                android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,15 +13,15 @@
         android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="vertical">
         <Button
-            android:id="@+id/recordVideo_button"
+            android:id="@+id/capture_image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Record Video"/>
+            android:text="@string/capture_greyscale_button"/>
         <Button
-            android:id="@+id/analysisFrames_button"
+            android:id="@+id/view_images_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Analysis Frames"/>
+            android:text="@string/view_images_button"/>
 
 
     </LinearLayout>
