--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -45,7 +45,7 @@
                 style="@style/MyTheme"
 
                 android:textColor="@android:color/holo_blue_light"
-                android:text="Connecting to scanner"
+                android:text="Focusing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <ProgressBar
